# Aifelton

./: BERT_EXP.ipynb  README.md  SDLA.ipynb  sentenceBert.ipynb
SSC/: BERT_EXP.ipynb  Readme.md  SDLA.ipynb  sentenceBert.ipynb
chapter1_transformer_interp/exercises/part31_superposition_and_saes/: 1.3.1_Toy_Models_of_Superposition_&_SAEs_exercises.ipynb
cognitive_distortion_gpt4o_test/: gpt4test_01.ipynb  readme.md
cognitive_distortion_human_test/: Sentiment_Analysis.ipynb  pyproject.toml  readme.md  streamlit_display.py  test_01.py
cognitive_distortion_human_test/data/: meta0911.csv
eda_raw_data/: readme.md  ydata_01.ipynb
eda_raw_data/raw_data/: 41598_2023_45386_MOESM1_ESM.csv  41598_2023_45386_MOESM2_ESM.csv  41598_2023_45386_MOESM3_ESM.csv  meta_Data_with_More_Varied_and_Natural_Scenarios.csv
eda_raw_data/ydata_profiling/: annotated.html  c2d2.html  meta.html  moesm.html
gen_sen_gpt/: make_sentence_00.ipynb  make_sentence_01.ipynb  pyproject.toml  readme.md  sentence_similarity.ipynb
gen_sen_gpt/data/: annotated_change.csv
gen_sen_gpt/raw_data/: Final_Modified_C2D20911.csv
gen_sen_slm/: gen_model_test_00.ipynb  gen_model_test_01.ipynb  gen_model_test_03.ipynb  model_pre_download.py  pyproject.toml  readme.md
gen_sen_slm/config/: model_parameter.csv  text_prompt_lst.csv
gen_sen_slm/data/: meta_gen01.csv  test00 - 복사본.csv
